--- a/src/main/resources/templates/profile/main.html
+++ b/src/main/resources/templates/profile/main.html
@@ -30,7 +30,7 @@
             </li>
         </ul>
         <div class="my-4">
-            <p style="font-size: 15px" th:text="${member.info}">
+            <p style="font-size: 15px; white-space: pre-line;" th:text="${member.info}">
             안녕하세요
             </p>
         </div>
