--- a/src/main/resources/templates/project/detail/fragments/description.html
+++ b/src/main/resources/templates/project/detail/fragments/description.html
@@ -24,7 +24,7 @@
             </ul>
             <div class="row">
                 <div class="col-md-7 px-3 py-5">
-                    <p class="lh-lg" th:text="*{description}">
+                    <p class="lh-lg" style="white-space: pre-line; word-break: break-all;" th:text="*{description}">
                         당신이 꼭 필요해요! 유니콘과 비밀의 이세계 향료 여행!
                     </p>
                 </div>
