--- a/src/main/resources/templates/project/detail/communityPostAddForm.html
+++ b/src/main/resources/templates/project/detail/communityPostAddForm.html
@@ -9,6 +9,10 @@
         a {
             text-decoration: none;
         }
+        .field-error {
+            border-color: #dc3545;
+            color: #dc3545;
+        }
     </style>
 </head>
 <body>
