--- a/src/main/resources/templates/project/home.html
+++ b/src/main/resources/templates/project/home.html
@@ -9,6 +9,12 @@
         a {
             text-decoration: none;
         }
+        .truncate-lines-2 {
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+        }
     </style>
 </head>
 <body>
@@ -24,7 +30,8 @@
                     </a>
                     <div>
                         <p class="text-secondary fw-bold" style="font-size: 12px; margin-bottom: 4px"><a class="text-secondary" href="#" th:href="@{/project/category/{categoryName}(categoryName=${project.category.name()})}" th:text="${project.category.description}">굿즈</a> | <a href="#" th:href="@{/member/{memberId}(memberId=${project.creatorId})}" class="text-secondary" th:text="${project.creatorUsername}">따개비</a></p>
-                        <p class="fw-bold" style="font-size: 14px"><a href="#" th:href="@{|/project/${project.projectId}|}" th:text="${project.title}" style="color: black">특별한 2023년을 위해, &lt;파도의 모든 기록&gt; 다이어리</a></p>
+
+                        <p class="fw-bold truncate-lines-2" style="font-size: 14px; height: 40px"><a href="#" th:href="@{|/project/${project.projectId}|}" th:text="${project.title}" style="color: black">특별한 2023년을 위해, &lt;파도의 모든 기록&gt; 다이어리</a></p>
                         <p class="text-danger fw-bold" style="font-size: 14px; margin-top: -10px" th:text="|${project.achievementRate}% 달성|">419% 달성</p>
                     </div>
                 </div>
@@ -61,7 +68,7 @@
                 </div>
                 <div class="col-6">
                     <p class="text-secondary fw-bold" style="font-size: 11px; margin-bottom: 4px"><a class="text-secondary" href="#" th:href="@{/project/category/{categoryName}(categoryName=${project.category.name()})}" th:text="${project.category.description}">굿즈</a> | <a href="#" th:href="@{/member/{memberId}(memberId=${project.creatorId})}" class="text-secondary" th:text="${project.creatorUsername}">따개비</a></p>
-                    <p class="fw-bold" style="font-size: 13px"><a href="#" th:href="@{|/project/${project.projectId}|}" th:text="${project.title}" style="color: black">특별한 2023년을 위해, &lt;파도의 모든 기록&gt; 다이어리</a></p>
+                    <p class="fw-bold truncate-lines-2" style="font-size: 13px; height: 38px"><a href="#" th:href="@{|/project/${project.projectId}|}" th:text="${project.title}" style="color: black">특별한 2023년을 위해, &lt;파도의 모든 기록&gt; 다이어리</a></p>
                     <p class="text-danger fw-bold" style="font-size: 13px; margin-top: -10px" th:text="|${project.achievementRate}% 달성|">419% 달성</p>
                 </div>
             </div>
