--- a/src/main/resources/templates/project/uploadForm.html
+++ b/src/main/resources/templates/project/uploadForm.html
@@ -1,6 +1,9 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
+    <title>텀블벅 - 크리에이터를 위한 크라우드 펀딩</title>
+    <link rel="icon" type="image/x-icon" href="/static/image/favicon.ico" th:href="@{/image/favicon.ico}">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta charset="utf-8">
     <link th:href="@{/css/bootstrap.min.css}"
           href="../css/bootstrap.min.css" rel="stylesheet">
