--- a/src/main/resources/templates/profile/backedProjects.html
+++ b/src/main/resources/templates/profile/backedProjects.html
@@ -44,7 +44,7 @@
     <div class="my-4" style="font-size: 15px">
         <span class="text-danger" th:text="${projectNum}">0</span>개의 프로젝트가 있습니다.
         <div class="my-4">
-            <div class="row" th:each="row : ${projectGrid}" th:if="${rowStat.count <= 4}">
+            <div class="row" th:each="row : ${projectGrid}">
                 <div class="col-md-3" th:each="project : ${row}">
                     <a href="#" th:href="@{|/project/${project.projectId}|}">
                         <img src="/static/image/mainImage.png" th:src="|/project/images/${project.mainImageStoreFileName}|" style="width: 100%; height: 240px; margin-bottom: 18px" alt="mainImage">
