--- a/src/main/resources/templates/project/list.html
+++ b/src/main/resources/templates/project/list.html
@@ -28,7 +28,7 @@
         <br th:if="${isSearchResultList} == true">
         <span class="text-danger" th:text="${pagingDto.getTotal()}">100</span>개의 프로젝트가 있습니다.
     </p>
-    <div class="row" th:each="row : ${projectGrid}" th:if="${rowStat.count <= 4}">
+    <div class="row" th:each="row : ${projectGrid}">
         <div class="col-md-3" th:each="project : ${row}">
             <a href="#" th:href="@{|/project/${project.projectId}|}">
                 <img src="/static/image/mainImage.png" th:src="|/project/images/${project.mainImageStoreFileName}|" style="width: 100%; height: 240px; margin-bottom: 16px" alt="mainImage">
@@ -44,17 +44,16 @@
     <nav aria-label="Page navigation example">
         <ul class="pagination justify-content-center">
             <li class="page-item" th:classappend="${pagingDto.hasPrev()} ? _ : disabled">
-                <a class="page-link" href="#" th:href="@{${#request.getRequestURI()}(pageNum=${pagingDto.startPage - 1}, limit=${pagingDto.getLimit()})}" aria-label="Previous">
+                <a class="page-link" href="#" th:href="@{${#request.getRequestURI()}(query=${param.query}, pageNum=${pagingDto.startPage - 1}, limit=${pagingDto.getLimit()})}" aria-label="Previous">
                     <span aria-hidden="true">&laquo;</span>
                 </a>
             </li>
-            <li th:each="i : ${#numbers.sequence(pagingDto.getStartPage(), pagingDto.getEndPage(), 1)}" class="page-item"><a class="page-link" href="#" th:href="@{${#request.getRequestURI()}(pageNum=${i}, limit=${pagingDto.getLimit()})}" th:text="${i}">1</a></li>
+            <li th:each="i : ${#numbers.sequence(pagingDto.getStartPage(), pagingDto.getEndPage(), 1)}" class="page-item"><a class="page-link" href="#" th:href="@{${#request.getRequestURI()}(query=${param.query}, pageNum=${i}, limit=${pagingDto.getLimit()})}" th:text="${i}">1</a></li>
             <li class="page-item" th:classappend="${pagingDto.hasNext()} ? _ : disabled">
-                <a class="page-link" href="#" th:href="@{${#request.getRequestURI()}(pageNum=${pagingDto.endPage + 1}, limit=${pagingDto.getLimit()})}" aria-label="Next">
+                <a class="page-link" href="#" th:href="@{${#request.getRequestURI()}(query=${param.query}, pageNum=${pagingDto.endPage + 1}, limit=${pagingDto.getLimit()})}" aria-label="Next">
                     <span aria-hidden="true">&raquo;</span>
                 </a>
             </li>
         </ul>
     </nav>
-
 </div>
