Refactor: 엔티티명 변경으로 인한 html 수정
createdTime, sponsoredTime, createDate -> dateCreated로 통일함에 따라 html 수정

--- a/src/main/resources/templates/project/detail/fragments/info.html
+++ b/src/main/resources/templates/project/detail/fragments/info.html
@@ -61,7 +61,7 @@
                         펀딩 기간
                     </div>
                     <div class="col-8 my-1">
-                        <span th:text="*{{createdTime}}">2022.11.18</span> ~ <span th:text="*{{deadline}}">2022.12.13</span>
+                        <span th:text="*{{dateCreated}}">2022.11.18</span> ~ <span th:text="*{{deadline}}">2022.12.13</span>
                     </div>
                 </div>
                 <div class="d-grid col-10 mx-auto my-3">
